change codeblock font size

--- a/assets/syntax.css
+++ b/assets/syntax.css
@@ -4,7 +4,9 @@
   padding: 16px;
   border-radius: 6px;
   overflow-x: auto;
+  font-size: 18px
 }
+
 .highlight pre {
   margin: 0;
   background: none;
