--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,7 @@
 <body>
   <nav>
     <a href="/">Home</a>
-    {% for page in site.pages %}
-      <a href="{{ page.url }}">{{ page.title }}</a>
-    {% endfor %}
+    <a href="/posts/"Posts</a>
   </nav>
   
   {{ content }}
