--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <body>
   <nav>
     <a href="/">Home</a>
-    <a href="/posts/"Posts</a>
+    <a href="/posts/">Posts</a>
   </nav>
   
   {{ content }}
