--- a/assets/style.css
+++ b/assets/style.css
@@ -12,8 +12,16 @@ h1,h2,h3 {
   line-height: 1.2;
 }
 
+nav {
+  text-align: center;
+}
+
+a {
+  color: #444;
+  text-decoration: none;
+}
+
 nav a {
   text-decoration: none;
   color: #333;
-  text-align: center;
 }
