add top right stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="/assets/syntax.css">
 </head>
 <body>
+  <div class="stuff-right">
+    <a href="https://github.com/bakjedev" target="_blank">Github</a>
+    <a href="https://www.linkedin.com/in/quinten-bubberman/" target="_blank">LinkedIn</a>
+  </div>
+
   <nav>
     <a href="/">Home</a>
     <a href="/posts">Posts</a>
