Add mailto link on left side

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <a href="https://github.com/bakjedev" target="_blank">Github</a>
     <a href="https://www.linkedin.com/in/quinten-bubberman/" target="_blank">LinkedIn</a>
   </div>
+  <div class="stuff-left">
+    <a href="mailto:bakje.mail@gmail.com" target="_blank">Mail</a>
+  </div>
 
   <nav>
     <a href="/">Home</a>
