--- a/assets/style.css
+++ b/assets/style.css
@@ -47,3 +47,16 @@ nav a:visited {
   text-decoration: none;
   color: #444;
 }
+.stuff-left {
+  position: fixed;
+  top: 40px;
+  left: 40px;
+  display: flex;
+  gap: 20px;
+  z-index: 1000;
+}
+
+.stuff-left a {
+  text-decoration: none;
+  color: #444;
+}
