Change mail to e-mail

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <a href="https://www.linkedin.com/in/quinten-bubberman/" target="_blank">LinkedIn</a>
   </div>
   <div class="stuff-left">
-    <a href="mailto:bakje.mail@gmail.com" target="_blank">Mail</a>
+    <a href="mailto:bakje.mail@gmail.com" target="_blank">E-mail</a>
   </div>
 
   <nav>
