--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   {% endif %}
 
   {% if page.datePosted %}
-    {{ page.datePosted }}
+    <p>{{ page.datePosted }}</p>
   {% endif %}
     
   {{ content }}
