Add font family and utf8

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,7 @@ body {
   font-size: 18px;
   color: #444;
   background-color: #EEEEEE;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   padding: 0 10px;
 }
 
