--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/projects">Projects</a>
-    <a href="/posts">Posts</a>
+    <a href="/pages">Posts</a>
   </nav>
 
   {% if page.title %}
