--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,10 @@
 body {
-  margin: 40px auto;
   max-width: 650px;
-  line-height: 1.6;
-  font-size: 18px;
+  margin: 40px auto;
+  padding: 0 10px;
+  font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: #444;
   background-color: #EEEEEE;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  padding: 0 10px;
 }
 
 h1,h2,h3 {
