--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,20 +8,21 @@
   <link rel="stylesheet" href="/assets/syntax.css">
 </head>
 <body>
-  <div class="stuff-right">
-    <a href="https://github.com/bakjedev" target="_blank">Github</a>
-    <a href="https://www.linkedin.com/in/quinten-bubberman/" target="_blank">LinkedIn</a>
-  </div>
-  <div class="stuff-left">
-    <a href="mailto:contact@bakje.dev" target="_blank">E-mail</a>
-  </div>
+  <header class="top-bar">
+    <div class="stuff-right">
+      <a href="https://github.com/bakjedev" target="_blank">Github</a>
+      <a href="https://www.linkedin.com/in/quinten-bubberman/" target="_blank">LinkedIn</a>
+    </div>
+    <div class="stuff-left">
+      <a href="mailto:contact@bakje.dev" target="_blank">E-mail</a>
+    </div>
 
-  <nav>
-    <a href="/">Home</a>
-    <a href="/projects">Projects</a>
-    <a href="/pages">Posts</a>
-  </nav>
-
+    <nav>
+      <a href="/">Home</a>
+      <a href="/projects">Projects</a>
+      <a href="/pages">Posts</a>
+    </nav>
+  </header>
   {% if page.title %}
     <h1>{{ page.title }}</h1>
   {% endif %}
