--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,23 @@
 body {
   max-width: 650px;
   margin: 40px auto;
-  padding: 0 10px;
+  padding: 80px 10px 40px 10px;
   font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: #444;
   background-color: #EEEEEE;
+}
+
+.top-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #EEEEEE;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
 }
 
 h1,h2,h3 {
@@ -41,12 +54,8 @@ nav a:visited {
 }
 
 .stuff-right {
-  position: fixed;
-  top: 40px;
-  right: 40px;
   display: flex;
   gap: 20px;
-  z-index: 1000;
 }
 
 .stuff-right a {
@@ -54,12 +63,8 @@ nav a:visited {
   color: #444;
 }
 .stuff-left {
-  position: fixed;
-  top: 40px;
-  left: 40px;
   display: flex;
   gap: 20px;
-  z-index: 1000;
 }
 
 .stuff-left a {
