--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body {
   max-width: 650px;
   margin: 40px auto;
-  padding: 80px 10px 40px 10px;
+  padding: 10px 10px 40px 10px;
   font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: #444;
   background-color: #EEEEEE;
@@ -13,11 +13,12 @@ body {
   left: 0;
   right: 0;
   background-color: #EEEEEE;
-  padding: 20px 40px;
+  padding: 10px 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
+  border-bottom: 1px solid #ddd;
 }
 
 h1,h2,h3 {
