Make header scroll if smaller than 600px and add back viweport thing

--- a/assets/style.css
+++ b/assets/style.css
@@ -77,3 +77,9 @@ nav a:visited {
   text-decoration: none;
   color: #444;
 }
+
+@media (max-width: 600px) {
+  .top-bar {
+    position: static;
+  }
+}
