--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   <header class="top-bar">
     <div class="stuff-left">
       <a href="mailto:contact@bakje.dev" target="_blank">E-mail</a>
+      <a href="/" target="_blank">Resume</a>
     </div>
     
     <nav>
