--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,20 @@
   <title>{{ site.title }}</title>
   <link rel="stylesheet" href="/assets/style.css">
   <link rel="stylesheet" href="/assets/syntax.css">
+
+  <script>
+    document.querySelectorAll('a').forEach(link => {
+      if (link.hostname !== window.location.hostname) {
+        link.setAttribute('target', '_blank');
+        link.setAttribute('rel', 'noopener');
+      }
+    });
+  </script>
 </head>
 <body>
   <header class="top-bar">
     <div class="stuff-left">
-      <a href="mailto:contact@bakje.dev" target="_blank">E-mail</a>
+      <a href="mailto:contact@bakje.dev">E-mail</a>
       <a href="/" target="_blank">Resume</a>
     </div>
     
@@ -21,8 +30,8 @@
     </nav>
 
     <div class="stuff-right">
-      <a href="https://github.com/bakjedev" target="_blank">Github</a>
-      <a href="https://www.linkedin.com/in/quinten-bubberman/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/bakjedev">Github</a>
+      <a href="https://www.linkedin.com/in/quinten-bubberman/">LinkedIn</a>
     </div>
   </header>
   {% if page.title %}
