remove margin at the top whenever in mobile mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,10 @@ nav a:visited {
 }
 
 @media (max-width: 600px) {
+  body {
+    margin: auto;
+  }
+
   .top-bar {
     position: static;
     flex-direction: column;
